--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,5 @@
-services:
-  - type: web
-    name: stock-bot
-    env: python
-    branch: main
-    buildCommand: pip install -r requirements.txt
-    startCommand: python bot.py
-    envVars:
-      - key: BOT_TOKEN
-        value: 7844949436:AAGuSSKfIaxojLMCcoWT2gigrq7ofv06zyQ
+name: stock-bot
+env: python
+buildCommand: pip install -r requirements.txt
+startCommand: python bot.py
+pythonVersion: 3.10
